<resources>
    <string name="app_name">Pholume</string>
    <string name="title_activity_login">Sign in</string>

    <string name="pref_current_user">android.pholume.com.pholume.current_user</string>
    <string name="pref_file_key">android.pholume.com.pholume.preferences_key</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login/Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for users…</string>

    <plurals name="years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>

    <plurals name="months_ago">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

    <plurals name="weeks_ago">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>

    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="minutes_ago">
        <item quantity="one">%d min ago</item>
        <item quantity="other">%d min ago</item>
    </plurals>

    <plurals name="seconds_ago">
        <item quantity="one">%d sec ago</item>
        <item quantity="other">%d sec ago</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
